# wayidle

./: Cargo.toml  LICENSE  README.md  sample-config.toml
src/: app.rs  args.rs  command.rs  config.rs  err.rs  idle.rs  main.rs
